--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,5 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "crawl4ai>=0.6.3",
+    "pandas>=2.3.0",
 ]
